--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -1645,17 +1645,16 @@ td {
 }
 .barangay-layer1 .left-layer {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   width: 50%;
   margin: 20px 10px;
- 
+  
 }
 .barangay-layer1 .left-layer .barangay-input {
   display: flex;
   flex-direction: column;
-  width: 45%;
+  width: 35%;
   
   margin-left: 20px;
 }
@@ -1683,7 +1682,7 @@ td {
   width: 100%;
 }
 .barangay-layer1 .left-layer .barangay-input .address-cont-brgy #address-no {
-  width: 30%;
+  width: 25%;
   margin-right: 10px;
   height: 30px;
   flex-shrink: 0;
@@ -1693,7 +1692,7 @@ td {
   fill: #FFF;
 }
 .barangay-layer1 .left-layer .barangay-input .address-cont-brgy #address-street, #address-subdi {
-  width: 70%;
+  width: 65%;
   margin-right: 10px;
   height: 30px;
   flex-shrink: 0;
@@ -1793,6 +1792,7 @@ td {
   flex-direction: row;
   width: 100%;
   height: 60%;
+  
 }
 .barangay-layer1 .right-layer .img-cont .left-img {
   display: flex;
@@ -2044,3 +2044,54 @@ td {
   padding: 5px 10px;
   text-align: center;
 }
+
+.addModal-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: red;
+  flex-direction: row;
+}
+.column-cont {
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+
+.modal-add {
+  display: flex;
+  z-index: 2;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  padding: 12% 0 0 29%;
+  display: none;
+}
+
+.modal-add .addForm {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  border-radius: 20px;
+  background: #f8f8f8;
+  width: 250px;
+  height: 250px;
+  padding: 20px;
+  justify-content: space-around;
+}
+
+.modal-add .addForm .closeAddForm {
+  width: 15px;
+  height: 15px;
+  display: flex;
+
+}
+
+
