--- a/Kapstondaw/BACKENDMONATO/style2.css
+++ b/Kapstondaw/BACKENDMONATO/style2.css
@@ -229,7 +229,7 @@ tr:nth-child(even) {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding: 12% 0 0 35%;
+  padding: 15% 0 0 36%;
   display: none;
  
 }
@@ -313,4 +313,16 @@ tr:nth-child(even) {
   justify-content: center;
 }
 
-
+.pangalawang-cont .labelOfficials {
+  display: flex;
+  flex-direction: row;
+}
+.pangalawang-cont .labelOfficials input {
+  margin-right: 5px;
+}
+.pangalawang-cont .labelOfficials #officialName_fname, #officialName_mname, #officialName_lname, #officialName_fname1, #officialName_mname1, #officialName_lname1 {
+  width: 32%;
+}
+.pangalawang-cont .labelOfficials #officialName_suffix, #officialName_suffix1{
+  width: 15%;
+}
