--- a/Kapstondaw/capstone-frontend/scss/layout/_active-service.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_active-service.scss
@@ -23,6 +23,7 @@
     padding: 1rem;
     text-align: center;
     width: calc(100% - 30px);
+    overflow: hidden;
     @media (min-width: 375px) {
       top: 50%;
       left: 50%;
@@ -70,6 +71,21 @@
       border-radius: 1rem;
       color: #fff;
       padding: 0.5rem 1rem;
+    }
+
+    .fake-btn {
+    }
+
+    .confirmation {
+      background-color: #fff;
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
