--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -1366,6 +1366,7 @@ footer .com ul li {
   padding: 1rem;
   text-align: center;
   width: calc(100% - 30px);
+  overflow: hidden;
 }
 @media (min-width: 375px) {
   .active-service form {
@@ -1411,6 +1412,17 @@ footer .com ul li {
   border-radius: 1rem;
   color: #fff;
   padding: 0.5rem 1rem;
+}
+.active-service form .confirmation {
+  background-color: #fff;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .active-success {
